Kubernetes/easy-shop-deployment.yml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: easy-shop-deployment
  namespace: easy-shop-ns
spec:
  replicas: 2
  selector:
    matchLabels:
      app: easy-shop
  template:
    metadata:
      labels:
        app: easy-shop
    spec:
      containers:
        - name: easy-shop
          image: varpriya/easy-shop:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
          resources:
            requests:
              memory: "256Mi"
              cpu: "200m"
            limits:
              memory: "512Mi"
              cpu: "500m"
          startupProbe:
            httpGet:
              path: /
              port: 3000
            failureThreshold: 30
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 20
            periodSeconds: 15
          livenessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 25
            periodSeconds: 20
