Kubernetes/mongodb-statefulset.yml
kind: StatefulSet
apiVersion: apps/v1

metadata:
  name: mongodb-statefulset
  namespace: easy-shop-ns

spec:
  serviceName: mongodb-svc
  replicas: 1
  selector:
    matchLabels:
      app: mongodb
  template:
    metadata:
      labels:
        app: mongodb
    spec:
      containers:
        - name: mongodb
          image: mongo:6.0
          ports:
            - containerPort: 27017
          volumeMounts:
            - name: mongodb-storage
              mountPath: /data/db
          resources:
            requests:
              memory: "256Mi"
              cpu: "250m"
            limits:
              memory: "512Mi"
              cpu: "500m"
      volumes:
       - name: mongodb-storage
         persistentVolumeClaim:
           claimName: mongodb-pvc
