Kubernetes/easy-shop-svc.yml
kind: Service
apiVersion: v1

metadata:
    name: easy-shop-svc
    namespace: easy-shop-ns
spec: 
  type: NodePort
  ports:
    - port: 80
      targetPort: 3000
      nodePort: 30000

  selector:
    app: easy-shop
