Kubernetes/mongodb-svc.yml
kind: Service
apiVersion: v1

metadata:
    name: mongodb-svc
    namespace : easy-shop-ns
spec:
  selector:
    app: mongodb
  ports:
    - port: 27017
      targetPort: 27017
