Kubernetes/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: easyshop-ingress
  namespace: easy-shop-ns
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/proxy-body-size: "50m"
spec:
  rules:
  - host: "3.253.57.242.nip.io"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: easy-shop-svc
            port:
              number: 80
